fix bio on mobile

--- a/index.css
+++ b/index.css
@@ -184,7 +184,6 @@ html > body{
 }
     #bio {
       font-size:24px;
-      padding-left: 5px;
      float: none;
     }
     #selfie {
